# srtgo

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-bot.txt  requirements-dev.txt  requirements.txt
bot/: __init__.py  config.py  main.py
bot/cogs/: admin.py  booking.py  favorite.py  profile.py
bot/core/: booking_engine.py  booking_session.py  conversation.py  slot_manager.py
bot/db/: migrations.py  models.py  repository.py
bot/security/: encryption.py  key_manager.py
bot/ui/: embeds.py  formatters.py  views.py
srtgo/: ktx.py  srt.py  srtgo.py  stations.py
